--- a/nextflow.slurm.config
+++ b/nextflow.slurm.config
@@ -3,15 +3,112 @@ process {
 
     withName: FormatFasta {
         cpus = 1
+	memory = '1 GB'
+	time = '2m'
     }
 
-    withName: AlignPeptide {
+    withName: AlignSequence {
         cpus = 1
         memory = '1 GB'
+	time = '5m'
     }
 
-    withName: PositiveSelection {
+    withName: FilterNonConfidentColumns {
         cpus = 1 
         memory = '1 GB'
+	time = '5m'
     }
+
+    withName: PepAli_2_DNAAli{
+        cpus: 1
+        memory = '1 GB'
+        time = '2m'
+    }
+
+    withName: ExtractFourFoldDegeSites{
+        cpus: 1
+        memory = '1 GB'
+        time = '2m'
+    }
+
+    withName: RaxmlPhylogeny{
+        cpus: 1
+        memory = '1 GB'
+        time = '5m'
+    }
+
+   withName: TestSaturation{
+        cpus: 1
+        memory = '1 GB'
+        time = '5m'
+    }
+
+   withName: TagForgroundInTree{
+        cpus: 1
+        memory = '1 GB'
+        time = '5m'
+    }
+
+   withName: PositiveSelectionABSREL{
+        cpus: 1
+        memory = '1 GB'
+        time = '5m'
+    }
+
+   withName: CombinePosselInfoABSREL{
+        cpus: 1
+        memory = '1 GB'
+        time = '5m'
+    }    
+   
+   withName: Fasta2Phylip{
+        cpus: 1
+        memory = '1 GB'
+        time = '5m'
+    }
+   
+   withName: Fasta2Phylip{
+        cpus: 1
+        memory = '1 GB'
+        time = '5m'
+   }
+   
+   withName: CreateCTLFile_null{
+       cpus: 1
+       memory = '1 GB'
+       time = '5m'
+   }
+  
+   withName: RunCodeML_null{
+       cpus: 1
+       memory = '1 GB'
+       time = '5m'
+   }
+
+   withName: CreateCTLFile_alt{
+       cpus: 1
+       memory = '1 GB'
+       time = '5m'
+   }
+
+   withName: RunCodeML_alt{
+       cpus: 1
+       memory = '1 GB'
+       time = '5m'
+   }
+
+   withName: CalculateCodemlPval{
+       cpus: 1
+       memory = '1 GB'
+       time = '5m'
+   }
+
+   withName: CombinePosselInfoPML_BRST{
+       cpus: 1
+       memory = '1 GB'
+       time = '5m'
+   }
+
+
+
 }
