--- a/nextflow.slurm.config
+++ b/nextflow.slurm.config
@@ -4,7 +4,7 @@ process {
     withName: FormatFasta {
         cpus = 1
 	memory = '1 GB'
-	time = '2m'
+	time = '24h'
     }
 
     withName: AlignSequence {
