confilg new process

--- a/nextflow.slurm.config
+++ b/nextflow.slurm.config
@@ -1,16 +1,22 @@
 process {
     executor = 'slurm'
 
+    withName: Batch_orthogroup{
+        cpus = 1
+        memory = '1 GB'
+        time = '5m'
+    }
+
     withName: FormatFasta {
         cpus = 1
-	memory = '1 GB'
-	time = '24h'
+	    memory = '1 GB'
+	    time = '5m'
     }
 
     withName: AlignSequence {
         cpus = 1
         memory = '1 GB'
-	time = '5m'
+	    time = '5m'
     }
 
     withName: FilterNonConfidentColumns {
