bug correction relative to the integration test

--- a/nextflow.slurm.config
+++ b/nextflow.slurm.config
@@ -1,6 +1,6 @@
 process {
     executor = 'slurm'
-
+    
     withName: Batch_orthogroup{
         cpus = 1
         memory = '1 GB'
@@ -9,20 +9,27 @@ process {
 
     withName: FormatFasta {
         cpus = 1
-	    memory = '1 GB'
-	    time = '5m'
+	memory = '1 GB'
+	time = '5m'
     }
 
     withName: AlignSequence {
         cpus = 1
-        memory = '1 GB'
-	    time = '5m'
+	errorStrategy = 'retry'
+	maxRetries = 3
+	//memory = '1 GB'
+	memory = {1.GB * task.attempt}
+	time = {5.minute * task.attempt}
+
     }
 
     withName: FilterNonConfidentColumns {
         cpus = 1 
-        memory = '1 GB'
-	time = '5m'
+        memory = {1.GB * task.attempt}
+	time = {5.minute * task.attempt}
+	errorStrategy = { task.exitStatus == 140 ? 'retry' : 'ignore' }
+	maxRetries = 3
+
     }
 
     withName: PepAli_2_DNAAli{
@@ -35,6 +42,7 @@ process {
         cpus: 1
         memory = '1 GB'
         time = '2m'
+	errorStrategy = { task.exitStatus == 140 ? 'retry' : 'ignore' }
     }
 
     withName: RaxmlPhylogeny{
@@ -87,8 +95,10 @@ process {
   
    withName: RunCodeML_null{
        cpus: 1
-       memory = '1 GB'
-       time = '5m'
+       memory = {1.GB * task.attempt}
+       time = {10.minute * task.attempt}
+       errorStrategy = { task.exitStatus == 140 ? 'retry' : 'ignore' }
+       maxRetries = 3
    }
 
    withName: CreateCTLFile_alt{
@@ -101,6 +111,10 @@ process {
        cpus: 1
        memory = '1 GB'
        time = '5m'
+       memory = {1.GB * task.attempt}
+       time = {10.minute * task.attempt}
+       errorStrategy = { task.exitStatus == 140 ? 'retry' : 'ignore' }
+       maxRetries = 3	
    }
 
    withName: CalculateCodemlPval{
