storing channel into a file

--- a/nextflow.slurm.config
+++ b/nextflow.slurm.config
@@ -27,6 +27,7 @@ process {
         cpus = 1 
         memory = {1.GB * task.attempt}
 	time = {5.minute * task.attempt}
+	//errorStrategy = 'ignore'
 	errorStrategy = { task.exitStatus == 140 ? 'retry' : 'ignore' }
 	maxRetries = 3
 
@@ -75,6 +76,11 @@ process {
         time = '5m'
     }    
    
+   withName: FlushChanelToFile{
+	cpus: 1
+	memory = '1 GB'
+	time = '5m'
+   } 
    withName: Fasta2Phylip{
         cpus: 1
         memory = '1 GB'
