--- a/nextflow.slurm.config
+++ b/nextflow.slurm.config
@@ -66,8 +66,9 @@ process {
 
    withName: PositiveSelectionABSREL{
         cpus: 1
-        memory = '1 GB'
-        time = '5m'
+	memory = {1.GB * task.attempt}
+        time = {5.minute * task.attempt}
+        errorStrategy = { task.exitStatus == 140 ? 'retry' : 'ignore' }
     }
 
    withName: CombinePosselInfoABSREL{
