--- a/nextflow.slurm.config
+++ b/nextflow.slurm.config
@@ -44,8 +44,7 @@ process {
         memory = '1 GB'
         time = '2m'
 	errorStrategy = { task.exitStatus == 140 ? 'retry' : 'ignore' }
-    }
-
+    }	
     withName: RaxmlPhylogeny{
         cpus: 1
         memory = '1 GB'
@@ -69,12 +68,15 @@ process {
 	memory = {1.GB * task.attempt}
         time = {5.minute * task.attempt}
         errorStrategy = { task.exitStatus == 140 ? 'retry' : 'ignore' }
+	maxRetries = 3
     }
 
    withName: CombinePosselInfoABSREL{
         cpus: 1
-        memory = '1 GB'
-        time = '5m'
+        memory = {2.GB * task.attempt}
+        time = {10.minute * task.attempt}
+	errorStrategy = { task.exitStatus == 140 ? 'retry' : 'ignore' }
+	maxRetries = 3
     }    
    
    withName: FlushChanelToFile{
