--- a/nextflow.slurm.config
+++ b/nextflow.slurm.config
@@ -22,7 +22,15 @@ process {
 	time = {5.minute * task.attempt}
 
     }
-
+   withName: RunGuidance{
+	cpus = 1
+	memory = '2 GB'
+        time = '10m' 
+	//errorStrategy = { task.exitStatus == 140 ? 'retry' : 'ignore' }
+	//memory = {2.GB * task.attempt}
+        //time = {10.minute * task.attempt}
+	//maxRetries = 3
+   }
     withName: FilterNonConfidentColumns {
         cpus = 1 
         memory = {1.GB * task.attempt}
