--- a/nextflow.slurm.config
+++ b/nextflow.slurm.config
@@ -31,6 +31,11 @@ process {
         //time = {10.minute * task.attempt}
 	//maxRetries = 3
    }
+   withName: FilterNonConfidentColumnsGuid{
+        cpus = 1
+        memory = '2 GB'
+        time = '10m'
+   }
     withName: FilterNonConfidentColumns {
         cpus = 1 
         memory = {1.GB * task.attempt}
