--- a/nextflow.slurm.config
+++ b/nextflow.slurm.config
@@ -24,17 +24,19 @@ process {
     }
    withName: RunGuidance{
 	cpus = 1
-	memory = '2 GB'
-        time = '10m' 
-	//errorStrategy = { task.exitStatus == 140 ? 'retry' : 'ignore' }
-	//memory = {2.GB * task.attempt}
-        //time = {10.minute * task.attempt}
-	//maxRetries = 3
+//	memory = '2 GB'
+  //      time = '10m' 
+	errorStrategy = { task.exitStatus == 140 ? 'retry' : 'ignore' }
+	memory = {2.GB * task.attempt}
+        time = {10.minute * task.attempt}
+	maxRetries = 3
    }
    withName: FilterNonConfidentColumnsGuid{
-        cpus = 1
-        memory = '2 GB'
-        time = '10m'
+	cpus = 1
+        memory = {1.GB * task.attempt}
+        time = {10.minute * task.attempt}
+        errorStrategy = { task.exitStatus == 140 ? 'retry' : 'ignore' }
+        maxRetries = 3
    }
     withName: FilterNonConfidentColumns {
         cpus = 1 
